# SSHniff

./: .gitattributes  .gitignore  README.md  notes.md
analysis/: analysis.ipynb  analysis_gitlab.ipynb  commands.json  shellbust.ipynb  xtrain.csv  xtrain_participants.csv
analysis/.ipynb_checkpoints/: analysis-checkpoint.ipynb  analysis_gitlab-checkpoint.ipynb  shellbust-checkpoint.ipynb  shellbust_asd-checkpoint.ipynb
analysis/data/: data_0e13724ea8f64cd6b07bbfdccbfb92d8.json  data_130c8036d4d741f4b9b23fb11dcd4299.json  data_419f85559ca149989f5c96b0a503fc3c.json  data_483697aa1a7946068b2f09ad3eba3870.json  data_54a9508433f443a9ba47a9d3426e763f.json  data_591a39a9af0f459299862699ee088509.json  data_5ccd29e0a09f42da978c46ae199312eb.json  data_65e06707a0ee4fec849e42f41260c39b.json  data_7995166c8a31403d8dcab128449e0e00.json  data_801ec96842e24ddd991a6c85c60f8752.json  data_801f48897c2f45f38a940fcf4d5787de.json  data_86e10941fa4b4690861873f3d38a5666.json  data_877a314094e84437983f2e27afa4128a.json  data_9f451d2cd7dd4fafbb342621305ea64f.json  data_ad60f55c8f02439b89859a8a1d48b775.json  data_ad6d1d5ba1f346168de846c1f0b3ac82.json  data_d3c6547bdcb8483a86215cdb7d0f0728.json  data_dc5f99017ca343808a3d778a8731db02.json  data_df872f2a23c8443f9864c92eb2c60460.json  (+1 more)
sshniff/: Cargo.toml  lsal_id_ssh.pcapng  no_pass_ssh.pcapng
sshniff/src/: main.rs
sshniff/src/analyser/: containers.rs  core.rs  mod.rs  scan.rs  utils.rs
sshniff/src/ui/: mod.rs  output.rs
sshniff/test_captures/: four_offers.pcapng  known_pass_lsal_id_exit.pcapng  lstlpn_to_ss_tlpn_nopass_exit.pcapng
(+77 files in other folders)
