[package]
name = "sshniff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
hex = "0.4.3"
log = "0.4.20"
md-5 = "0.10.6"
rtshark = "2.7.1"
simple_logger = "4.3.3"
